# Veil

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_ARCIUM.md  DEPLOY_QUICK.md  DEPLOY_VERCEL_RAILWAY.md  QUICKSTART.md  QUICKSTART_ROOMS.md  README.md  README_ROOMS.md  RUNNING.md  SECURITY.md  SIAP_DEPLOY.md  STATUS.md  index-rooms.html  index.html  index.html.backup  package.json  setup.sh  test-deployed.sh  test-rooms.sh  vercel.json
arcium-program/: Anchor.toml  Cargo.toml
arcium-program/circuits/: init_game.arcis  reveal_result.arcis  vote.arcis
arcium-program/src/: lib.rs  lib_arcium.rs  lib_simple.rs
client/: arcium-client.js  config.js
server/: .env.example  arcium-manager.js  arcium-manager.ts  package-lock.json  package.json  roomManager.js  server.js  tsconfig.json  types.ts
